# PyQS

./: .gitignore  pyproject.toml
pyqs/: worker.py
tests/: test_manager_worker.py
